-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0 Beta2
-
-
b14a7efd6 (dev), a2480aa46 (6.5)
It seems QWebSocket is not disconnected and is left open in the background if QWebSocket is deleted. Looks like close() might not close it either, but only triggers the signals.
To reproduce:
- run attached example
- click Open socket
- wait until connected (message in console)
- click Close socket
The underlying websocket still seems to be connected to the server.
| For Gerrit Dashboard: QTBUG-111248 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 461202,3 | wasm: make sure connection is closed before being deleted | dev | qt/qtwebsockets | Status: MERGED | +2 | 0 |
| 461852,2 | wasm: make sure connection is closed before being deleted | 6.5 | qt/qtwebsockets | Status: MERGED | +2 | 0 |