wasm: make sure connection is closed before being deleted

Pick-to: 6.5
Fixes: QTBUG-111248
Change-Id: I94a033fedf546c4d7f36af6c82a166dc33800f1f
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>